--- a/css/shared.css
+++ b/css/shared.css
@@ -90,7 +90,7 @@ footer {
 }
 
 @media (max-width: 768px) {
-	h1 {
+	.title {
 		text-align: center;
 		margin: 1% 0;
 	}
